force-app/main/default/objects/TacheFusion__c/TacheFusion__c.object-meta.xml
<CustomObject>
    <description>Historique pour les fusions interactive manuelle ou rapide d’un compte ou d’un chantier</description>
    <label>Tâche de fusion</label>
    <nameField>
        <displayFormat>TF/{YYYY}/{00000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tâches de fusion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>