force-app/main/default/objects/TacheFusion__c/fields/dateFusion__c.field-meta.xml
<CustomField>
    <fullName>dateFusion__c</fullName>
    <label>Date de fusion</label>
    <type>DateTime</type>
</CustomField>