force-app/main/default/objects/TacheFusion__c/fields/erreur__c.field-meta.xml
<CustomField>
    <fullName>erreur__c</fullName>
    <label>Message d&apos;erreur de l&apos;exception</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>