force-app/main/default/objects/TacheFusion__c/fields/estTermine__c.field-meta.xml
<CustomField>
    <fullName>estTermine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terminé</label>
    <type>Checkbox</type>
</CustomField>