force-app/main/default/objects/TacheFusion__c/fields/exception__c.field-meta.xml
<CustomField>
    <fullName>exception__c</fullName>
    <label>Nom de la classe d&apos;exception</label>
    <length>255</length>
    <type>Text</type>
</CustomField>