force-app/main/default/objects/TacheFusion__c/fields/IDConserve__c.field-meta.xml
<CustomField>
    <fullName>IDConserve__c</fullName>
    <label>ID conservé</label>
    <length>255</length>
    <type>Text</type>
</CustomField>