force-app/main/default/objects/TacheFusion__c/fields/IDSupprime__c.field-meta.xml
<CustomField>
    <fullName>IDSupprime__c</fullName>
    <label>ID supprimé</label>
    <length>255</length>
    <type>Text</type>
</CustomField>