force-app/main/default/objects/TacheFusion__c/fields/objet__c.field-meta.xml
<CustomField>
    <fullName>objet__c</fullName>
    <label>Objet fusionnné</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compte</fullName>
            </value>
            <value>
                <fullName>Chantier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>