force-app/main/default/objects/TacheFusion__c/fields/refConservee__c.field-meta.xml
<CustomField>
    <fullName>refConservee__c</fullName>
    <label>Référence conservée</label>
    <length>255</length>
    <type>Text</type>
</CustomField>