force-app/main/default/objects/TacheFusion__c/fields/refSupprimee__c.field-meta.xml
<CustomField>
    <fullName>refSupprimee__c</fullName>
    <label>Référence supprimée</label>
    <length>255</length>
    <type>Text</type>
</CustomField>