force-app/main/default/objects/TacheFusion__c/fields/trace__c.field-meta.xml
<CustomField>
    <fullName>trace__c</fullName>
    <label>Trace de l&apos;exception</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>