force-app/main/default/objects/TacheFusion__c/listViews/Tout.listView-meta.xml
<ListView>
    <fullName>Tout</fullName>
    <columns>NAME</columns>
    <columns>objet__c</columns>
    <columns>IDConserve__c</columns>
    <columns>refConservee__c</columns>
    <columns>IDSupprime__c</columns>
    <columns>refSupprimee__c</columns>
    <columns>dateFusion__c</columns>
    <columns>estTermine__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>